fix: replace padding with margin for misaligned horizontal line on smaller screens

--- a/packages/frontend/src/components/Footer/footer.module.css
+++ b/packages/frontend/src/components/Footer/footer.module.css
@@ -18,8 +18,8 @@
 
 @media (max-width: 1024px) {
   .footer {
-    margin: 1rem;
-    padding: 0;
+    padding: 1rem;
+    margin: 0;
   }
 
   .footer .footerContent {
@@ -49,7 +49,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1220px;
   margin-left: auto;
   margin-right: auto;
 }
